# especialista-contabilidade

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  compose.yml  config-dev.yml  config-docker.yml  config-test.yml  pyproject.toml  sonar-project.properties
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  docker-image.yml  release.yml
docker/app/: Dockerfile
especialista_contabilidade/: main.py
especialista_contabilidade/agents/echo/: agent.py
especialista_contabilidade/agents/react_agent/: agent.py
especialista_contabilidade/core/: container.py
especialista_contabilidade/mcp/: prompts.py  tools.py
especialista_ia_contabilidade/: main.py
especialista_ia_contabilidade/agents/echo/: agent.py
especialista_ia_contabilidade/agents/react_agent/: agent.py  default_execution_system_prompt.txt
especialista_ia_contabilidade/core/: container.py
especialista_ia_contabilidade/mcp/: prompts.py  tools.py
frontend/: README.md  angular.json  package-lock.json  package.json  vitest.config.ts
plugins/especialista-contabilidade/: README.md
plugins/especialista-contabilidade/.claude-plugin/: plugin.json
plugins/especialista-contabilidade/skills/analise-profissional/: SKILL.md
plugins/especialista-contabilidade/skills/analise-profissional/references/: auditoria-pericia.md  contabilidade-publica.md  custos-gerencial.md  demonstracoes-contabeis.md  indicadores-financeiros.md  matematica-financeira.md  normas-contabeis.md  regimes-tributarios.md  teoria-etica-profissional.md  trabalhista-societario.md
tests/integration/: conftest.py  test_echo_agent_api.py
tests/unit/: test_smoke.py
