[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "especialista-ia-contabilidade"
version = "0.1.0"
description = "Aumente a capacidade de seu assistente com habilidades de um especialista em contabilidade."
readme = "README.md"
authors = [{ name = "Especialista IA Contabilidade Team", email = "contabilidade@btech.software" }]
requires-python = ">=3.12"
dependencies = [
    "btech-agent-lab>=1.12.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["especialista_ia_contabilidade"]

[dependency-groups]
dev = [
    "pre-commit~=4.6.0",
    "ruff~=0.15.10",
]
test = [
    "pytest~=9.0.3",
    "testcontainers[postgres]~=4.14.2",
    "testcontainers[redis]~=4.14.2",
    "testcontainers[vault]~=4.14.2",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E203", "E501"]
